[project]
name = "bfsi-loan-voice-agent"
version = "0.1.0"
description = "BFSI loan status voice agent with ElevenLabs TTS, tool calling, human handoff, and Twilio-ready webhooks."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

